--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "__tests__/button/button.spec.tsx"],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "module": "esnext",
