--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cred-ui",
+  "name": "@credinvestments/cred-ui",
   "version": "0.0.1",
   "description": "CRED Investments UI library",
   "main": "./dist/cjs/index.js",
@@ -53,5 +53,11 @@
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/icons": "4.6.0",
+    "antd": "4.6.3",
+    "lodash": "4.17.20"
   }
 }
